# Recoverable_Urban_Resilience

./: .gitignore  README.md  pyproject.toml
configs/: data_mining.yml  large_scale_optimization.yml  optimization.yml
docs/: analysis_questions.md  calibration_explanation_zh.md  data_inventory.md  event_level_conclusion_zh.md  final_conclusion_zh.md  model_data_mapping.md  optimization_model_implementation.md  rainfall_event_definitions_zh.md  research_plan.md
high-level idea/: high-level idea-v1.md  learning_and_law_high_level_idea.md
scripts/: analyze_budget_fine_sweep.py  analyze_budget_leverage_phase.py  analyze_city_structure.py  analyze_early_predictability.py  analyze_event_city_structure.py  analyze_event_decision_criticality.py  analyze_event_footprint_identifiability.py  analyze_event_regime_generalization.py  analyze_event_spatial_footprint_proxy.py  analyze_factorized_action_surrogate.py  analyze_finite_budget_gap.py  analyze_footprint_aware_law_frontier.py  analyze_graph_structure_ablation.py  analyze_hybrid_absorption_mechanisms.py  analyze_hybrid_footprint_calibration.py  analyze_intervention_structure.py  analyze_large_scale_city_structure.py  analyze_law_potential.py  analyze_neural_surrogate_leakage.py  analyze_new_york_active_set_screening.py  analyze_new_york_footprint_lp_boundary.py  analyze_nonobvious_action_laws.py  analyze_od_message_passing_surrogate.py  analyze_parameter_deconfounded_law.py  analyze_parameter_ensemble_stability.py  analyze_parameter_lp_selection_laws.py  analyze_parameter_nonobvious_laws.py  analyze_rainfall_event_impacts.py  (+26 more)
(+388 files in other folders)
